--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         }
 
         function finalizeTeams() {
-            const message = `**Final Teams:**\n🟦 **Team 1:** ${teams.team1.join(", ")}\n🟥 **Team 2:** ${teams.team2.join(", ")}`;
+            const message = `**Final Teams:**\n <:1_:1346719791926218832>  **Team 1:** ${teams.team1.join(", ")}\n <:2_:1346719832472682611>  **Team 2:** ${teams.team2.join(", ")}`;
             fetch(webhookURL, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
